--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "chai": "^4.3.7",
     "mocha": "^10.1.0"
   }
