--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "mongodb": "^6.17.0",
     "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
-    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
     "chai": "^4.5.0",
-    "mocha": "^10.8.2"
+    "mocha": "^10.8.2",
+    "supertest": "^7.1.4"
   }
 }
